Update navigation tree on navigation (#41)
Now the navigation tree is always updated, no matter how the current was
changed.

--- a/formprincipal.lfm
+++ b/formprincipal.lfm
@@ -266,6 +266,7 @@ object frmPrincipal: TfrmPrincipal
             'Needs review'
             'Associated!'
           )
+          OnSelectionChanged = RadioGroupStatusSelectionChanged
           TabOrder = 1
         end
       end
