--- a/formprincipal.lfm
+++ b/formprincipal.lfm
@@ -14,11 +14,11 @@ object frmPrincipal: TfrmPrincipal
   OnKeyPress = FormKeyPress
   OnShow = FormShow
   Position = poDesktopCenter
-  LCLVersion = '1.8.4.0'
+  LCLVersion = '2.0.0.4'
   object StatusBar1: TStatusBar
     Left = 0
-    Height = 28
-    Top = 633
+    Height = 23
+    Top = 638
     Width = 943
     Panels = <>
   end
@@ -96,23 +96,23 @@ object frmPrincipal: TfrmPrincipal
   end
   object Panel1: TPanel
     Left = 0
-    Height = 588
+    Height = 593
     Top = 33
     Width = 943
     Align = alBottom
     Anchors = [akTop, akLeft, akRight, akBottom]
     Caption = 'Panel1'
-    ClientHeight = 588
+    ClientHeight = 593
     ClientWidth = 943
     TabOrder = 2
     object Panel2: TPanel
       Left = 144
-      Height = 586
+      Height = 591
       Top = 1
       Width = 798
       Align = alClient
       Caption = 'Panel2'
-      ClientHeight = 586
+      ClientHeight = 591
       ClientWidth = 798
       TabOrder = 0
       object ScrollBox1: TScrollBox
@@ -172,7 +172,7 @@ object frmPrincipal: TfrmPrincipal
         AnchorSideTop.Control = Splitter4
         AnchorSideTop.Side = asrBottom
         Left = 1
-        Height = 109
+        Height = 114
         Top = 357
         Width = 796
         HorzScrollBar.Page = 1
@@ -220,7 +220,7 @@ object frmPrincipal: TfrmPrincipal
       object Panel3: TPanel
         Left = 1
         Height = 114
-        Top = 471
+        Top = 476
         Width = 796
         Align = alBottom
         Caption = 'Panel3'
@@ -231,16 +231,16 @@ object frmPrincipal: TfrmPrincipal
           Left = 1
           Height = 112
           Top = 1
-          Width = 680
+          Width = 675
           Align = alClient
           Enabled = False
           TabOrder = 0
         end
         object RadioGroupStatus: TRadioGroup
-          Left = 681
+          Left = 676
           Height = 112
           Top = 1
-          Width = 114
+          Width = 119
           Align = alRight
           Anchors = [akRight, akBottom]
           AutoFill = True
@@ -256,14 +256,14 @@ object frmPrincipal: TfrmPrincipal
           ChildSizing.Layout = cclTopToBottomThenLeftToRight
           ChildSizing.ControlsPerLine = 4
           ClientHeight = 92
-          ClientWidth = 110
+          ClientWidth = 115
           ColumnLayout = clVerticalThenHorizontal
           Enabled = False
           ItemIndex = 0
           Items.Strings = (
             'Not associated'
             'Associating'
-            'Needs review'
+            'Needs reviewed'
             'Associated!'
           )
           TabOrder = 1
@@ -273,7 +273,7 @@ object frmPrincipal: TfrmPrincipal
         Cursor = crVSplit
         Left = 1
         Height = 5
-        Top = 466
+        Top = 471
         Width = 796
         Align = alBottom
         Anchors = [akLeft, akBottom]
@@ -282,13 +282,13 @@ object frmPrincipal: TfrmPrincipal
     end
     object Splitter1: TSplitter
       Left = 139
-      Height = 586
+      Height = 591
       Top = 1
       Width = 5
     end
     object TreeView1: TTreeView
       Left = 1
-      Height = 586
+      Height = 591
       Top = 1
       Width = 138
       Align = alLeft
@@ -302,7 +302,7 @@ object frmPrincipal: TfrmPrincipal
   object ProgressBar1: TProgressBar
     Left = 0
     Height = 12
-    Top = 621
+    Top = 626
     Width = 943
     Align = alBottom
     TabOrder = 3
@@ -409,15 +409,15 @@ object frmPrincipal: TfrmPrincipal
         OnClick = MenuItemSynciBibliaClick
       end
       object MenuItemStrongNegrito: TMenuItem
-        Caption = 'Show words with strong tags in bold'
+        Caption = 'Show words with Strong''s tags in bold'
         OnClick = MenuItemStrongNegritoClick
       end
       object MenuItemStrongsCount: TMenuItem
-        Caption = 'Show strongs count'
+        Caption = 'Show Strongs count'
         OnClick = MenuItemStrongsCountClick
       end
       object MenuItemAlwaysOnTop: TMenuItem
-        Caption = 'Keep iBiblia always on top of other windows'
+        Caption = 'Keep iBiblia on top of other windows'
         OnClick = MenuItemAlwaysOnTopClick
       end
     end
