--- a/formprincipal.lfm
+++ b/formprincipal.lfm
@@ -4,7 +4,7 @@ object frmPrincipal: TfrmPrincipal
   Top = 109
   Width = 943
   Caption = 'iBiblia'
-  ClientHeight = 661
+  ClientHeight = 658
   ClientWidth = 943
   KeyPreview = True
   Menu = MainMenu1
@@ -14,11 +14,11 @@ object frmPrincipal: TfrmPrincipal
   OnKeyPress = FormKeyPress
   OnShow = FormShow
   Position = poDesktopCenter
-  LCLVersion = '2.0.0.4'
+  LCLVersion = '2.0.2.0'
   object StatusBar1: TStatusBar
     Left = 0
-    Height = 23
-    Top = 638
+    Height = 21
+    Top = 637
     Width = 943
     Panels = <>
   end
@@ -96,23 +96,23 @@ object frmPrincipal: TfrmPrincipal
   end
   object Panel1: TPanel
     Left = 0
-    Height = 593
+    Height = 592
     Top = 33
     Width = 943
     Align = alBottom
     Anchors = [akTop, akLeft, akRight, akBottom]
     Caption = 'Panel1'
-    ClientHeight = 593
+    ClientHeight = 592
     ClientWidth = 943
     TabOrder = 2
     object Panel2: TPanel
       Left = 144
-      Height = 591
+      Height = 590
       Top = 1
       Width = 798
       Align = alClient
       Caption = 'Panel2'
-      ClientHeight = 591
+      ClientHeight = 590
       ClientWidth = 798
       TabOrder = 0
       object ScrollBox1: TScrollBox
@@ -172,7 +172,7 @@ object frmPrincipal: TfrmPrincipal
         AnchorSideTop.Control = Splitter4
         AnchorSideTop.Side = asrBottom
         Left = 1
-        Height = 114
+        Height = 113
         Top = 357
         Width = 796
         HorzScrollBar.Page = 1
@@ -220,7 +220,7 @@ object frmPrincipal: TfrmPrincipal
       object Panel3: TPanel
         Left = 1
         Height = 114
-        Top = 476
+        Top = 475
         Width = 796
         Align = alBottom
         Caption = 'Panel3'
@@ -231,16 +231,16 @@ object frmPrincipal: TfrmPrincipal
           Left = 1
           Height = 112
           Top = 1
-          Width = 680
+          Width = 650
           Align = alClient
           Enabled = False
           TabOrder = 0
         end
         object RadioGroupStatus: TRadioGroup
-          Left = 681
+          Left = 651
           Height = 112
           Top = 1
-          Width = 114
+          Width = 144
           Align = alRight
           Anchors = [akRight, akBottom]
           AutoFill = True
@@ -255,8 +255,8 @@ object frmPrincipal: TfrmPrincipal
           ChildSizing.ShrinkVertical = crsScaleChilds
           ChildSizing.Layout = cclTopToBottomThenLeftToRight
           ChildSizing.ControlsPerLine = 4
-          ClientHeight = 92
-          ClientWidth = 110
+          ClientHeight = 93
+          ClientWidth = 140
           ColumnLayout = clVerticalThenHorizontal
           Enabled = False
           ItemIndex = 0
@@ -274,7 +274,7 @@ object frmPrincipal: TfrmPrincipal
         Cursor = crVSplit
         Left = 1
         Height = 5
-        Top = 471
+        Top = 470
         Width = 796
         Align = alBottom
         Anchors = [akLeft, akBottom]
@@ -283,13 +283,13 @@ object frmPrincipal: TfrmPrincipal
     end
     object Splitter1: TSplitter
       Left = 139
-      Height = 591
+      Height = 590
       Top = 1
       Width = 5
     end
     object TreeView1: TTreeView
       Left = 1
-      Height = 591
+      Height = 590
       Top = 1
       Width = 138
       Align = alLeft
@@ -303,7 +303,7 @@ object frmPrincipal: TfrmPrincipal
   object ProgressBar1: TProgressBar
     Left = 0
     Height = 12
-    Top = 626
+    Top = 625
     Width = 943
     Align = alBottom
     TabOrder = 3
@@ -397,6 +397,24 @@ object frmPrincipal: TfrmPrincipal
           OnClick = MenuItemPopupTriggerClick
         end
       end
+      object MenuItemStrongsCount: TMenuItem
+        Caption = 'Strongs count'
+        object MenuItemStrongsCountNone: TMenuItem
+          Caption = 'Hide'
+          Hint = 'Don''t show Strong''s count'
+          OnClick = MenuItemStrongsCountClick
+        end
+        object MenuItemStrongsCountWords: TMenuItem
+          Caption = 'Count words'
+          Hint = 'Show a count of words having Strong''s tags'
+          OnClick = MenuItemStrongsCountClick
+        end
+        object MenuItemStrongsCountStrongs: TMenuItem
+          Caption = 'Count Strong''s tags'
+          Hint = 'Show a count of Strong''s tags in verse'
+          OnClick = MenuItemStrongsCountClick
+        end
+      end
       object MenuItem22: TMenuItem
         Caption = 'Automatically auto-associate verses'
         OnClick = MenuItem22Click
@@ -412,10 +430,6 @@ object frmPrincipal: TfrmPrincipal
       object MenuItemStrongNegrito: TMenuItem
         Caption = 'Show words with strong tags in bold'
         OnClick = MenuItemStrongNegritoClick
-      end
-      object MenuItemStrongsCount: TMenuItem
-        Caption = 'Show strongs count'
-        OnClick = MenuItemStrongsCountClick
       end
       object MenuItemAlwaysOnTop: TMenuItem
         Caption = 'Keep iBiblia always on top of other windows'
