--- a/formprincipal.lfm
+++ b/formprincipal.lfm
@@ -4,7 +4,7 @@ object frmPrincipal: TfrmPrincipal
   Top = 109
   Width = 943
   Caption = 'iBiblia'
-  ClientHeight = 658
+  ClientHeight = 661
   ClientWidth = 943
   KeyPreview = True
   Menu = MainMenu1
@@ -14,12 +14,14 @@ object frmPrincipal: TfrmPrincipal
   OnKeyPress = FormKeyPress
   OnShow = FormShow
   Position = poDesktopCenter
+  ShowHint = True
   LCLVersion = '2.0.2.0'
   object StatusBar1: TStatusBar
     Left = 0
-    Height = 21
-    Top = 637
+    Height = 23
+    Top = 638
     Width = 943
+    AutoHint = True
     Panels = <>
   end
   object ToolBar1: TToolBar
@@ -96,23 +98,23 @@ object frmPrincipal: TfrmPrincipal
   end
   object Panel1: TPanel
     Left = 0
-    Height = 592
+    Height = 593
     Top = 33
     Width = 943
     Align = alBottom
     Anchors = [akTop, akLeft, akRight, akBottom]
     Caption = 'Panel1'
-    ClientHeight = 592
+    ClientHeight = 593
     ClientWidth = 943
     TabOrder = 2
     object Panel2: TPanel
       Left = 144
-      Height = 590
+      Height = 591
       Top = 1
       Width = 798
       Align = alClient
       Caption = 'Panel2'
-      ClientHeight = 590
+      ClientHeight = 591
       ClientWidth = 798
       TabOrder = 0
       object ScrollBox1: TScrollBox
@@ -172,7 +174,7 @@ object frmPrincipal: TfrmPrincipal
         AnchorSideTop.Control = Splitter4
         AnchorSideTop.Side = asrBottom
         Left = 1
-        Height = 113
+        Height = 114
         Top = 357
         Width = 796
         HorzScrollBar.Page = 1
@@ -220,7 +222,7 @@ object frmPrincipal: TfrmPrincipal
       object Panel3: TPanel
         Left = 1
         Height = 114
-        Top = 475
+        Top = 476
         Width = 796
         Align = alBottom
         Caption = 'Panel3'
@@ -231,16 +233,16 @@ object frmPrincipal: TfrmPrincipal
           Left = 1
           Height = 112
           Top = 1
-          Width = 650
+          Width = 680
           Align = alClient
           Enabled = False
           TabOrder = 0
         end
         object RadioGroupStatus: TRadioGroup
-          Left = 651
+          Left = 681
           Height = 112
           Top = 1
-          Width = 144
+          Width = 114
           Align = alRight
           Anchors = [akRight, akBottom]
           AutoFill = True
@@ -255,8 +257,8 @@ object frmPrincipal: TfrmPrincipal
           ChildSizing.ShrinkVertical = crsScaleChilds
           ChildSizing.Layout = cclTopToBottomThenLeftToRight
           ChildSizing.ControlsPerLine = 4
-          ClientHeight = 93
-          ClientWidth = 140
+          ClientHeight = 92
+          ClientWidth = 110
           ColumnLayout = clVerticalThenHorizontal
           Enabled = False
           ItemIndex = 0
@@ -274,7 +276,7 @@ object frmPrincipal: TfrmPrincipal
         Cursor = crVSplit
         Left = 1
         Height = 5
-        Top = 470
+        Top = 471
         Width = 796
         Align = alBottom
         Anchors = [akLeft, akBottom]
@@ -283,13 +285,13 @@ object frmPrincipal: TfrmPrincipal
     end
     object Splitter1: TSplitter
       Left = 139
-      Height = 590
+      Height = 591
       Top = 1
       Width = 5
     end
     object TreeView1: TTreeView
       Left = 1
-      Height = 590
+      Height = 591
       Top = 1
       Width = 138
       Align = alLeft
@@ -303,7 +305,7 @@ object frmPrincipal: TfrmPrincipal
   object ProgressBar1: TProgressBar
     Left = 0
     Height = 12
-    Top = 625
+    Top = 626
     Width = 943
     Align = alBottom
     TabOrder = 3
@@ -383,17 +385,20 @@ object frmPrincipal: TfrmPrincipal
         end
       end
       object MenuItemDictPopup: TMenuItem
-        Caption = 'Show dictionary popup on...'
+        Caption = 'Dictionary popup trigger...'
         object MenuItemMouseHover: TMenuItem
           Caption = 'Mouse hover'
+          Hint = 'Activate the popup dictionary whenever you hover the mouse pointer over a word'
           OnClick = MenuItemPopupTriggerClick
         end
         object MenuItemAltMouseHover: TMenuItem
           Caption = 'Alt + Mouse hover'
+          Hint = 'Activate the popup dictionary whenever you hover the mouse pointer over a word while holding the Alt key'
           OnClick = MenuItemPopupTriggerClick
         end
         object MenuItemCtrlMouseHover: TMenuItem
           Caption = 'Ctrl + Mouse hover'
+          Hint = 'Activate the popup dictionary whenever you hover the mouse pointer over a word while holding the Ctrl key'
           OnClick = MenuItemPopupTriggerClick
         end
       end
@@ -401,38 +406,43 @@ object frmPrincipal: TfrmPrincipal
         Caption = 'Strongs count'
         object MenuItemStrongsCountNone: TMenuItem
           Caption = 'Hide'
-          Hint = 'Don''t show Strong''s count'
+          Hint = 'Don''t show any count'
           OnClick = MenuItemStrongsCountClick
         end
         object MenuItemStrongsCountWords: TMenuItem
           Caption = 'Count words'
-          Hint = 'Show a count of words having Strong''s tags'
+          Hint = 'Show a count of words having strong''s tags'
           OnClick = MenuItemStrongsCountClick
         end
         object MenuItemStrongsCountStrongs: TMenuItem
           Caption = 'Count Strong''s tags'
-          Hint = 'Show a count of Strong''s tags in verse'
+          Hint = 'Show a count of all strong''s tags in verse'
           OnClick = MenuItemStrongsCountClick
         end
       end
       object MenuItem22: TMenuItem
-        Caption = 'Automatically auto-associate verses'
+        Caption = 'Auto-associate unassociated verses'
+        Hint = 'Run the auto-association whenever you navigate to an unassociated verse'
         OnClick = MenuItem22Click
       end
       object MenuItemSyncTheWord: TMenuItem
         Caption = 'Sync theWord to iBiblia verse'
+        Hint = 'Keeps theWord synchronized to iBiblia''s current verse, and current word''s strong, morphology and lemma.'
         OnClick = MenuItemSyncTheWordClick
       end
       object MenuItemSynciBiblia: TMenuItem
         Caption = 'Sync iBiblia to theWord verse'
+        Hint = 'Keeps iBiblia synchronized to theWord''s current verse'
         OnClick = MenuItemSynciBibliaClick
       end
       object MenuItemStrongNegrito: TMenuItem
-        Caption = 'Show words with strong tags in bold'
+        Caption = 'Words with strongs in bold'
+        Hint = 'Words with associated strong''s tags are displayed in bold font'
         OnClick = MenuItemStrongNegritoClick
       end
       object MenuItemAlwaysOnTop: TMenuItem
-        Caption = 'Keep iBiblia always on top of other windows'
+        Caption = 'Always on top'
+        Hint = 'Keep iBiblia window always on top of other windows'
         OnClick = MenuItemAlwaysOnTopClick
       end
     end
