--- a/formpopup.lfm
+++ b/formpopup.lfm
@@ -15,7 +15,7 @@ object frmDictionaryPopup: TfrmDictionaryPopup
   OnDestroy = FormDestroy
   OnHide = FormHide
   OnKeyDown = FormKeyDown
-  LCLVersion = '1.8.4.0'
+  LCLVersion = '2.0.2.0'
   object TabControlStrongs: TTabControl
     Left = 1
     Height = 261
@@ -26,12 +26,24 @@ object frmDictionaryPopup: TfrmDictionaryPopup
     TabOrder = 0
     object Panel1: TPanel
       Left = 2
-      Height = 256
-      Top = 3
+      Height = 230
+      Top = 29
       Width = 419
       Align = alClient
       Anchors = [akTop, akLeft, akRight]
+      ClientHeight = 230
+      ClientWidth = 419
       TabOrder = 1
+      object RichMemoStrong: TRichMemo
+        Left = 1
+        Height = 228
+        Top = 1
+        Width = 417
+        Align = alClient
+        HideSelection = False
+        TabOrder = 0
+        ZoomFactor = 1
+      end
     end
   end
   object TabControlMorfos: TTabControl
@@ -44,12 +56,24 @@ object frmDictionaryPopup: TfrmDictionaryPopup
     TabOrder = 1
     object Panel2: TPanel
       Left = 2
-      Height = 145
-      Top = 3
+      Height = 119
+      Top = 29
       Width = 419
       Align = alClient
       BorderStyle = bsSingle
+      ClientHeight = 117
+      ClientWidth = 417
       TabOrder = 1
+      object RichMemoMorpho: TRichMemo
+        Left = 1
+        Height = 115
+        Top = 1
+        Width = 415
+        Align = alClient
+        HideSelection = False
+        TabOrder = 0
+        ZoomFactor = 1
+      end
     end
   end
   object Splitter1: TSplitter
