--- a/formpopup.lfm
+++ b/formpopup.lfm
@@ -18,7 +18,7 @@ object frmDictionaryPopup: TfrmDictionaryPopup
   LCLVersion = '2.0.2.0'
   object TabControlStrongs: TTabControl
     Left = 1
-    Height = 261
+    Height = 263
     Top = 1
     Width = 423
     OnChange = TabControlStrongsChange
@@ -26,21 +26,27 @@ object frmDictionaryPopup: TfrmDictionaryPopup
     TabOrder = 0
     object Panel1: TPanel
       Left = 2
-      Height = 230
-      Top = 29
+      Height = 258
+      Top = 3
       Width = 419
       Align = alClient
       Anchors = [akTop, akLeft, akRight]
-      ClientHeight = 230
+      BevelOuter = bvNone
+      ClientHeight = 258
       ClientWidth = 419
       TabOrder = 1
       object RichMemoStrong: TRichMemo
-        Left = 1
-        Height = 228
-        Top = 1
-        Width = 417
+        Left = 0
+        Height = 258
+        Top = 0
+        Width = 419
         Align = alClient
+        BorderStyle = bsNone
+        Color = clInfoBk
         HideSelection = False
+        OnMouseWheel = RichMemoMouseWheel
+        ReadOnly = True
+        ScrollBars = ssAutoVertical
         TabOrder = 0
         ZoomFactor = 1
       end
@@ -56,21 +62,26 @@ object frmDictionaryPopup: TfrmDictionaryPopup
     TabOrder = 1
     object Panel2: TPanel
       Left = 2
-      Height = 119
-      Top = 29
+      Height = 145
+      Top = 3
       Width = 419
       Align = alClient
-      BorderStyle = bsSingle
-      ClientHeight = 117
-      ClientWidth = 417
+      BevelOuter = bvNone
+      ClientHeight = 145
+      ClientWidth = 419
       TabOrder = 1
       object RichMemoMorpho: TRichMemo
-        Left = 1
-        Height = 115
-        Top = 1
-        Width = 415
+        Left = 0
+        Height = 145
+        Top = 0
+        Width = 419
         Align = alClient
+        BorderStyle = bsNone
+        Color = clInfoBk
         HideSelection = False
+        OnMouseWheel = RichMemoMouseWheel
+        ReadOnly = True
+        ScrollBars = ssAutoVertical
         TabOrder = 0
         ZoomFactor = 1
       end
@@ -79,10 +90,11 @@ object frmDictionaryPopup: TfrmDictionaryPopup
   object Splitter1: TSplitter
     Cursor = crVSplit
     Left = 1
-    Height = 5
-    Top = 262
+    Height = 3
+    Top = 264
     Width = 423
     Align = alBottom
+    ParentColor = False
     ResizeAnchor = akBottom
   end
 end
